--- a/statics.css
+++ b/statics.css
@@ -15,8 +15,8 @@ body{
 
 .cover-page{
     background: #f2f2f2;
-    width: 1050px; 
-    height: 800px;  
+    width: 1010px; 
+    height: 730px;  
     border-radius: 45px;
     margin: 25px;
     place-content: centre;
@@ -61,7 +61,6 @@ body{
     margin-top: 0;
     font-weight: bold;
     
-   
     
 }
 
@@ -104,5 +103,49 @@ ul{
     width: 473px;
     border-radius: 405px;
     
+    
+}
+img{
+    width: 35px;
+    
+}
+.pet-cta{
+    display: flex;
+    padding: 8px;
+   
+    /* justify-content: space-between; */
+}
+.pets {
+    border: 3px solid #9d9898;
+    border-radius: 70%;
+    width: 25px;
+    height: 25px;
+    padding: 5px;
+    margin-right: 10px;
+    
+}
+
+.search{
+    background: #d6d3d3;
+    border-radius: 32px ;
+    height: 52px;
+    width: 69%;
+    display: flex;
+    font-family: poppins;
+    margin: 20px;
+}
+
+.search > p{
+     margin-left: 20px;
+     font-size: .8rem;
+     margin-right: 38px;
+}
+
+#btn{
+    border: none;
+    border-radius: 20px;
+    width: 22%;
+    margin: 3px;
+    background-color: #328938da;
     
 }
